--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,9 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Run containers
-        run: docker compose up -d
+        run: |
+            docker compose up -d
+            sleep 20s
 
       - name: Test Containers are up and running
         run: >
