--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,8 @@ jobs:
 
       - name: Test Index Page Content
         run: > 
-            phrase='"Hello, visited 1 times"';
-            test=$(curl http://localhost -o | grep $phrase);
+            phrase="Hello, visited 1 times";
+            test=$(curl http://localhost -s | grep "$phrase");
             expected=$phrase;
             if [[ $test != $expected ]];
             then
