--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,9 +43,8 @@ jobs:
 
       - name: Test Index Page Content
         run: > 
-            phrase="Hello, visited 1 times";
-            test=$(curl http://localhost -s | grep "$phrase");
-            expected=$phrase;
+            expected="Hello, visited 1 times";
+            test=$(curl http://localhost -s);
             if [[ $test != $expected ]];
             then
               echo "$test not equal to $expected";
